--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -120,4 +120,5 @@ html(lang="ko")
             accept="image/*"
           )
         button.form__button.form__button--submit(type="submit") 제출
+        div.form__validation-message 이것은 테스트 메시지 입니다
     script(src="/javascripts/dashboard/bundle.js")
