--- a/public/stylesheets/dashboard/main.css
+++ b/public/stylesheets/dashboard/main.css
@@ -477,6 +477,14 @@ input#header-image {
   padding: 7px 5px;
   color: red; }
 
+.form__validation-message {
+  display: none;
+  color: red;
+  text-align: center;
+  margin-top: 15px; }
+  .form__validation-message--invalid {
+    display: block; }
+
 .gutter {
   box-sizing: border-box;
   float: left;
