feat: add feature to upload multiple snapshot file

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -114,6 +114,7 @@ html(lang="ko")
           input.snapshot__input.snapshot__input--add(
             type="file"
             accept="image/*"
+            multiple
           )
           input.snapshot__input.snapshot__input--update(
             type="file"
