--- a/sass/home/partials/_modal.scss
+++ b/sass/home/partials/_modal.scss
@@ -94,7 +94,7 @@
   top: 50%; left: 50%;
   transform:  translate3d(-50%, -50%, 0);
   width: 50px; height: 50px;
-  background: no-repeat center/100% url('../../images/loading-icon.gif')
+  background: no-repeat center/100% url('../../assets/loading-icon.gif')
 }
 
 .modal__loading-icon--invisible {
