--- a/public/stylesheets/lab/main.css
+++ b/public/stylesheets/lab/main.css
@@ -198,7 +198,11 @@ footer {
   overflow: hidden;
   cursor: pointer;
   transition: opacity 1.3s; }
-  @media only screen and (max-width: 425px) {
+  @media only screen and (max-width: 1100px) {
+    .project {
+      width: 33vw;
+      height: 33vw; } }
+  @media only screen and (max-width: 770px) {
     .project {
       width: 50vw;
       height: 50vw; } }
@@ -360,7 +364,7 @@ footer {
   transform: translate3d(-50%, -50%, 0);
   width: 50px;
   height: 50px;
-  background: no-repeat center/100% url("../../images/loading-icon.gif"); }
+  background: no-repeat center/100% url("../../assets/loading-icon.gif"); }
 
 .modal__loading-icon--invisible {
   visibility: hidden; }
@@ -417,7 +421,7 @@ footer {
 .loading-icon {
   width: 60px;
   height: 60px;
-  background: no-repeat center/100% url("../../images/loading-icon.gif");
+  background: no-repeat center/100% url("../../assets/loading-icon.gif");
   margin: auto; }
 
 /*# sourceMappingURL=main.css.map */
