--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -226,7 +226,7 @@ section {
 .loading-icon {
   width: 60px;
   height: 60px;
-  background: no-repeat center/100% url("../../images/loading-icon.gif");
+  background: no-repeat center/100% url("../../assets/loading-icon.gif");
   margin: auto; }
 
 .video-wrap {
