--- a/public/stylesheets/work/main.css
+++ b/public/stylesheets/work/main.css
@@ -364,7 +364,7 @@ footer {
   transform: translate3d(-50%, -50%, 0);
   width: 50px;
   height: 50px;
-  background: no-repeat center/100% url("../../images/loading-icon.gif"); }
+  background: no-repeat center/100% url("../../assets/loading-icon.gif"); }
 
 .modal__loading-icon--invisible {
   visibility: hidden; }
@@ -421,7 +421,7 @@ footer {
 .loading-icon {
   width: 60px;
   height: 60px;
-  background: no-repeat center/100% url("../../images/loading-icon.gif");
+  background: no-repeat center/100% url("../../assets/loading-icon.gif");
   margin: auto; }
 
 /*# sourceMappingURL=main.css.map */
