--- a/sass/info/partials/_info.scss
+++ b/sass/info/partials/_info.scss
@@ -21,7 +21,7 @@
     content: '';
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    background: url('../../images/Pingpong.jpg') center / 100% no-repeat;
+    background: url('../../assets/Pingpong.jpg') center / 100% no-repeat;
     z-index: -1;
     opacity: 0.6;
 
