--- a/sass/project/partials/_loader.scss
+++ b/sass/project/partials/_loader.scss
@@ -14,6 +14,6 @@
 
 .loading-icon {
   width: 60px; height: 60px;
-  background: no-repeat center/100% url('../../images/loading-icon.gif');
+  background: no-repeat center/100% url('../../assets/loading-icon.gif');
   margin: auto;
 }
