--- a/public/stylesheets/dashboard/main.css
+++ b/public/stylesheets/dashboard/main.css
@@ -463,6 +463,17 @@ input#header-image {
   top: 0px;
   right: 0px; }
 
+.snapshot-preview__cover {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: no-repeat center/30% url("../../assets/loading-icon.gif");
+  background-color: rgba(0, 0, 0, 0.7); }
+  .snapshot-preview__cover--hide {
+    display: none; }
+
 .snapshot__input {
   position: absolute;
   top: 50%;
