--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -393,22 +393,6 @@ input#header-image {
   border: 1px solid #ccc;
   overflow: hidden;
   margin: 15px 0px 50px 0px;
-
-  // // "Snapshot" box
-  // &::before {
-  //   content: 'Snapshot';
-  //   box-sizing: border-box;
-  //   display: block;
-  //   position: absolute;
-  //   top: 5px; left: 5px;
-  //   width: 225px; height: 225px;
-  //   line-height: 225px;
-  //   border: 1px solid #ccc;
-  //   text-align: center;
-  //   font-weight: 100;
-  //   font-size: 2rem;
-  //   z-index: -1;
-  // }
 }
 
 .snapshot-preview {
@@ -441,14 +425,22 @@ input#header-image {
   width: 100%; height: 100%;
 }
 
-.snapshot-preview__add-button {
-  
-}
-
 .snapshot-preview__buttons {
   visibility: hidden;
   position: absolute;
   top: 0px; right: 0px;
+}
+
+.snapshot-preview__cover {
+  position: absolute;
+  top: 0px; left: 0px;
+  width: 100%; height: 100%;
+  background: no-repeat center/30% url('../../assets/loading-icon.gif');
+  background-color: rgba(0, 0, 0, 0.7);
+
+  &--hide {
+    display: none;
+  }
 }
 
 .snapshot__input {
