refactor: throttle snapshot images in project page

--- a/views/project.pug
+++ b/views/project.pug
@@ -31,4 +31,4 @@ html(lang="en")
       li.detail-list-item.detail-list-item--role 
         span.detail-list-item__name Role
         span.detail-list-item__description #{role}
-    script(type="module" src="/javascripts/project/main.js")
+    script(src="/javascripts/project/bundle.js")
