feat: add project header

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -38,6 +38,13 @@ html(lang="ko")
             )
             div.title__validation-message
         div.form__member
+          label.form__member-name.form__label.form__label--text(for="header") Header
+          div.form__input-wrap
+            textarea.form__input.form__input--text(
+              id="header"
+              name="header"
+            )
+        div.form__member
           label.form__member-name.form__label.form__label--text(for="quick-view-url") Quick View Url
           div.form__input-wrap
             input.form__input.form__input--text(
