--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -62,6 +62,16 @@ header {
   font-weight: 500;
   color: #fff; }
 
+.header__text {
+  position: absolute;
+  width: 50%;
+  line-height: 1.3;
+  top: 30%;
+  left: 5%;
+  font-size: 1.3vw;
+  font-weight: 500;
+  color: #fff; }
+
 .navigation {
   position: relative;
   box-sizing: border-box;
