--- a/sass/project/partials/_header.scss
+++ b/sass/project/partials/_header.scss
@@ -26,3 +26,13 @@ header {
   font-weight: 500;
   color: #fff;
 }
+
+.header__text {
+  position: absolute;
+  width: 50%;
+  line-height: 1.3;
+  top: 30%; left: 5%;
+  font-size: 1.3vw;
+  font-weight: 500;
+  color: #fff;
+}
