--- a/sass/dashboard/partials/_index-section.scss
+++ b/sass/dashboard/partials/_index-section.scss
@@ -53,21 +53,21 @@
 
 .index-section__project-list {
   margin-top: 40px;
+  border: 1px solid #ccc;
 }
 
 .index-section__project {
   position: relative;
+  width: $index-section-project-width;
   height: $index-section-project-height;
   padding: 7px 20px;
   font-weight: 300;
-  border-width: 1px 1px 0px 1px;
+  border-width: 1px 1px 1px 1px;
   border-color: #ccc;
   border-style: solid;
+  background-color: #fff;
+  margin: 5px;
   cursor: pointer;
-
-  &:last-child {
-    border-bottom: 1px solid #ccc;
-  }
 
   &:hover {
     background: #f8f8f8;
