--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -3,7 +3,7 @@ html(lang="ko")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400|Roboto:100,300,400,500" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400|Roboto:100,300,400,500,700&display=swap" rel="stylesheet")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous")
     link(rel="stylesheet" href="/stylesheets/dashboard/main.css")
     title dashboard
@@ -131,6 +131,4 @@ html(lang="ko")
           )
         button.form__button.form__button--submit(type="submit") 제출
         div.form__validation-message 이것은 테스트 메시지 입니다
-    script(src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin)
-    script(src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin)
     script(src="/javascripts/dashboard/bundle.js")
