--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -3,7 +3,7 @@ html(lang="ko")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400|Roboto:100,300,400,500" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400|Roboto:100,300,400,500,700&display=swap" rel="stylesheet")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous")
     link(rel="stylesheet" href="/stylesheets/dashboard/main.css")
     title dashboard
@@ -14,7 +14,9 @@ html(lang="ko")
         span |
         a.index-section__logout(href="/auth/logout") 로그아웃
       div.index-section__create-button 프로젝트 생성
+      div#like_button_container(data-commentid=1)
       ul.index-section__project-list
+      div#like_button_container(data-commentid=2)
     div.gutter
     div.content-section
       form.form.form--hide(action="/project" method="post" enctype="multipart/form-data")
