--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -103,8 +103,7 @@ html(lang="ko")
         div.form__member
           label.form__member-name.form__label.form__label--text(for="video-url") Video Url
           div.form__input-wrap.form__input-wrap--video
-          div.form__button.form__button--add
-            i.fas.fa-plus-circle
+          div.video-url-add-button-container
         div.form__member
           label.form__member-name.form__label.form__label--text(for="snapshot-column") Snapshot Column
           div.form__input-wrap
