--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -254,7 +254,8 @@
   margin-top: 5px;
 }
 
-.added-input__button {
+.video-url-remove-button-container {
+  display: inline;
   box-sizing: border-box;
   width: 20px; height: 20px;
   border-radius: 50%;
