--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -6,6 +6,7 @@ html(lang="ko")
     link(href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400|Roboto:100,300,400,500,700&display=swap" rel="stylesheet")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous")
     link(rel="stylesheet" href="/stylesheets/dashboard/main.css")
+    link(rel="stylesheet" href="/stylesheets/dashboard/dropzone.css")
     title dashboard
   body
     div.index-section
@@ -64,23 +65,26 @@ html(lang="ko")
           )
           div.header-image__validation-message
         div.form__member
-          //- label.form__member-name.form__label.form__label--text(for="video-url") Video Url
           div.project-form-video-url-input-list-container
-          //- div.form__input-wrap.form__input-wrap--video
           div.video-url-add-button-container
         div.project-form-snapshot-column-input-container
-        div.snapshot-preview-wrap
-          div.snapshot-preview
-          div.snapshot-add-button-container
-          input.snapshot__input.snapshot__input--add(
-            type="file"
-            accept="image/*"
-            multiple
-          )
-          input.snapshot__input.snapshot__input--update(
-            type="file"
-            accept="image/*"
-          )
+        //- div.snapshot-preview-wrap
+        //-   div.snapshot-preview
+        //-   div.snapshot-add-button-container
+        //-   input.snapshot__input.snapshot__input--add(
+        //-     type="file"
+        //-     accept="image/*"
+        //-     multiple
+        //-   )
+        //-   input.snapshot__input.snapshot__input--update(
+        //-     type="file"
+        //-     accept="image/*"
+        //-   )
         div.project-form-submit-button
         div.form__validation-message 이것은 테스트 메시지 입니다
+      form.dropzone(
+        action="/upload"
+        id="snapshots"
+      )
+    script(src="/javascripts/dashboard/dropzone.js")
     script(src="/javascripts/dashboard/bundle.js")
